# Learn-Lightning-Labs-Pools

./: .gitignore  01-bitcoin-fundamentals.md  02-lightning-fundamentals.md  03-lightning-liquidity.md  04-pool-auctions-lease-pricing.md  05-pool-observations.md  LICENSE  README.md
.claude/: settings.local.json
advisor/: .gitignore  README.md  SPEC.md  pyproject.toml  requirements.txt
advisor/scripts/: gen_proto.sh
advisor/src/advisor/: __init__.py  cli.py  config.py  history.py  lndclient.py  models.py
advisor/src/advisor/collectors/: __init__.py  lnd_collector.py  pool_collector.py
advisor/src/advisor/llm/: privacy.py
advisor/src/advisor/lnrpc/: lightning_pb2_grpc.py
advisor/src/advisor/recommend/: __init__.py  economics.py  engine.py  models.py  rules.py
advisor/src/advisor/web/: __init__.py  server.py
advisor/src/advisor/web/static/: index.html
advisor/tests/: test_history.py  test_models.py  test_recommend.py  test_web.py
diagrams/: README.md
repo-reviews/: faraday.md  lnd.md  loop.md  pool.md
setup/: bitcoin-core.md  lnd.md  operations.md  pool.md
writing/: how-lightning-liquidity-works.md  how-pool-solves-inbound-liquidity.md  what-is-lightning-pool.md
